# Molt-Farm-Proxy

./: .gitignore  AGENTS.md  README.md  pyproject.toml
app/: __init__.py  bridge_cli.py  bridge_report.py  devloop.py  errors.py  jsonl.py  main.py  ollama_client.py  proxy_dev.py  schemas_chat.py  schemas_responses.py  settings.py  tool_guard.py  translator.py
examples/: exec_command_capability_probe.py  get_weather_tool_probe.py
notes/: exec_command_capability_findings.md
tests/: test_app.py  test_bridge_cli.py  test_examples_exec_command_capability_probe.py  test_examples_get_weather_tool_probe.py  test_tool_guard.py  test_translator.py
