[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "molt-farm-proxy"
version = "0.1.0"
description = "FastAPI proxy translating OpenAI Responses API requests into Ollama chat completions."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "httpx>=0.27,<1.0",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.4,<3.0",
  "uvicorn>=0.30,<1.0",
  "websockets>=13,<16",
  "zstandard>=0.23,<1.0",
]

[project.scripts]
codex-bridge = "app.bridge_cli:main"
vscode-codex-bridge = "app.bridge_cli:main_vscode"
codex-bridge-report = "app.bridge_report:main"
molt-proxy-dev = "app.proxy_dev:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.24,<1.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
